{
    "name": "PhoneInput",
    "maps": [
        {
            "name": "ArTouch",
            "id": "1c36ddf9-294c-48c0-aefd-9b4390ef0b7c",
            "actions": [
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "1fda6d1d-edb9-4595-bf73-b9228b9781a0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "326ca7f8-f3bc-4435-93dc-36630da7081b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fcb8e0ce-d94a-4ca3-a0f5-df9da376b76e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfe7e4cb-2312-450b-b0f4-9dd8f28e0834",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialog",
            "id": "d2c64a3a-1d51-4738-81fc-330bc2f0d869",
            "actions": [
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "d37ea871-e578-41d8-a0dc-7519ef0be985",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "b37314eb-5882-44ab-9c1a-6dc0d43c3114",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a5c47fd4-3507-486a-bd34-537e31697915",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70a042b9-08bd-45a3-b488-9808ecec4f41",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}